<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:paddingTop="45dp"
    android:paddingLeft="32dp"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/strSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textAllCaps="true"
            style="@style/patient_overview_strong"
            android:id="@+id/tvSummary" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/user_female"
            android:layout_below="@id/tvSummary"
            android:paddingTop="10dp"
            android:layout_alignParentStart="true"
            android:id="@+id/ivPic" />

        <RelativeLayout
            android:id="@+id/rlVitalsSummary"
            android:layout_toEndOf="@id/ivPic"
            android:layout_below="@id/tvSummary"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:text="@string/txtRespirationRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/patient_overview_text"
                android:id="@+id/tvRR" />

            <TextView
                android:text="15 breaths / min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:layout_toEndOf="@id/tvRR"
                style="@style/patient_overview_text"
                android:id="@+id/tvRRVal" />

            <TextView
                android:text="@string/txtBloodPressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/tvRR"
                android:layout_alignRight="@id/tvRR"
                android:paddingTop="5dp"
                android:layout_below="@id/tvRR"
                style="@style/patient_overview_text"
                android:id="@+id/tvBP" />

            <TextView
                android:text="120 / 80 mmHg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingLeft="10dp"
                android:layout_below="@id/tvRRVal"
                android:layout_toEndOf="@id/tvBP"
                style="@style/patient_overview_text"
                android:id="@+id/tvBPVal" />

            <TextView
                android:text="@string/strHeartRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/tvRR"
                android:layout_alignRight="@id/tvRR"
                android:paddingTop="5dp"
                android:id="@+id/tvHR"
                style="@style/patient_overview_text"
                android:layout_below="@id/tvBP" />

            <TextView
                android:text="100 bpm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingLeft="10dp"
                android:layout_below="@id/tvBPVal"
                android:layout_toEndOf="@id/tvHR"
                style="@style/patient_overview_text"
                android:id="@+id/tvHRVal" />

            <TextView
                android:text="@string/txtTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:layout_below="@id/tvHR"
                android:layout_alignLeft="@id/tvRR"
                android:layout_alignRight="@id/tvRR"
                style="@style/patient_overview_text"
                android:id="@+id/tvTemp" />

            <TextView
                android:text="37 C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingLeft="10dp"
                android:layout_toEndOf="@id/tvTemp"
                android:layout_below="@id/tvHRVal"
                style="@style/patient_overview_text"
                android:id="@+id/tvTempVal" />

        </RelativeLayout>

        <RelativeLayout
            android:paddingTop="20dp"
            android:layout_toEndOf="@id/ivPic"
            android:paddingLeft="10dp"
            android:layout_below="@id/rlVitalsSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/strAdmissionDate"
                style="@style/patient_overview_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvAdmissionDate" />

            <TextView
                android:text="Nov 1, 2016, 3:15 PM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/tvAdmissionDate"
                android:paddingLeft="10dp"
                style="@style/patient_overview_text"
                android:id="@+id/tvAdmissionDateVal" />

            <TextView
                android:text="@string/strLastCheckup"
                style="@style/patient_overview_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/tvAdmissionDate"
                android:layout_alignRight="@id/tvAdmissionDate"
                android:paddingTop="5dp"
                android:layout_below="@id/tvAdmissionDate"
                android:id="@+id/tvLastCheck" />

            <TextView
                android:text="Nov 2, 2016, 8:15 AM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/tvLastCheck"
                android:layout_below="@id/tvAdmissionDate"
                android:paddingTop="5dp"
                android:paddingLeft="10dp"
                style="@style/patient_overview_text"
                android:id="@+id/tvLastCheckVal" />
        </RelativeLayout>
    </RelativeLayout>



</LinearLayout>